# william-travel

./: .gitignore  requiment
be/: .env  README.md  alembic.ini  pyproject.toml  setup_travel_app.sh  travel_data_only.sql  william_travel_postman_collection.json
be/alembic/: __init__.py  env.py  script.py.mako
be/alembic/versions/: 20250521_161417_initial.py
be/app/: __init__.py  main.py
be/app/api/: __init__.py  deps.py
be/app/api/v1/: __init__.py  router.py
be/app/core/: __init__.py  config.py  error_handling.py  middleware.py  security.py
be/app/crud/: __init__.py  accommodation.py  article.py  base.py  community_post.py  event.py  food.py  location.py  media.py  permission.py  role.py  user.py
be/app/db/: __init__.py  models.py  session.py
be/app/schemas/: __init__.py  accommodation.py  article.py  base.py  community_post.py  event.py  food.py  location.py  media.py  permission.py  role.py  user.py
be/app/scripts/: __init__.py  init_test_data.py  setup_database.py
be/app/services/: __init__.py  email_service.py  minio_service.py
be/app/utils/: role.py
be/docs/: developer_guide.md  frontend_api_guide.md  technologies.md  troubleshooting_migrations.md
be/docs/db_design/: db_v1.sql
be/tests/: __init__.py  conftest.py
be/tests/api/v1/: base.py  test_accommodations.py  test_articles.py  test_auth.py  test_error_handling.py  test_foods.py  test_location.py  test_location_filtering.py  test_locations.py  test_middleware.py  test_ratings.py  test_roles.py  (+1 more)
be/tests/crud/: test_accommodation.py  test_base.py  test_location.py  test_user.py
(+638 files in other folders)
